--- a/Contracts/RFP/RFP1_2a_DeepDrillingTech.cfg
+++ b/Contracts/RFP/RFP1_2a_DeepDrillingTech.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RFP1_2a_DeepDrillingTech
     title = RFP1.2a: "Deep Drilling Technology"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Advanced Drilling Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Deep Drilling Technology Validation\n\nOur Duna surface probes have detected anomalous readings that require subsurface investigation. Analysis suggests the material of interest exists approximately 35-50 meters below the surface, well beyond the capability of standard surface sampling equipment.\n\nBefore deploying expensive deep drilling systems to Duna, we must validate our technology and operational procedures. This pathfinder mission will test our drilling systems on Kerbin, where we can monitor operations closely and refine procedures before interplanetary deployment.\n\nYour objective is to demonstrate deep drilling capability, test sample collection and storage systems, and prove the integration of mobility systems with drilling operations. Success will validate our technology for deployment to Duna during the next transfer window.
+    description = Mission Computer Terminal: WARNING Access to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Advanced Drilling Systems Division\nTO: Technology Development Team\nSUBJECT: Deep Drilling Technology Validation\n\nOur Duna surface probes have detected anomalous readings that require subsurface investigation. Analysis suggests the material of interest exists approximately 35-50 meters below the surface, well beyond the capability of standard surface sampling equipment.\n\nBefore deploying expensive deep drilling systems to Duna, we must validate our technology and operational procedures. This pathfinder mission will test our drilling systems on Kerbin, where we can monitor operations closely and refine procedures before interplanetary deployment.\n\nYour objective is to demonstrate deep drilling capability, test sample collection and storage systems, and prove the integration of mobility systems with drilling operations. Success will validate our technology for deployment to Duna during the next transfer window.
     
     notes = Technology Validation Requirements:\n\nDeep Drilling Systems\nDeploy drilling rover to Kerbin surface and demonstrate drilling to 35m depth through extended operation simulation.\n\nSample Collection and Storage\nTest sample collection, storage, and preservation systems to validate material handling capabilities.\n\nMobility Integration\nProve integration between mobility systems and drilling equipment for operational flexibility.\n\nExtended Operations\nDemonstrate drilling system reliability during extended operations essential for interplanetary deployment.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Excellent achievement! Deep drilling technology successfully validated with proven 35m+ drilling capability. Mobile drilling systems operational and ready for interplanetary deployment. RFP1.2b is now available.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements
@@ -29,10 +29,17 @@ CONTRACT_TYPE
     // Available after RF1.1 deployment complete
     REQUIREMENT
     {
-        name = RF1_1_Complete
-        type = Expression
+        name = RF1_1c_Complete
+        type = CompleteContract
 	    title = title
-        expression = $GLOBAL_rf1_1_allcomplete
+        contractType = RF1_1c_DunaSurfaceSurvey
+    }
+    REQUIREMENT
+    {
+        name = RF1_1d_Complete
+        type = CompleteContract
+	    title = title
+        contractType = RF1_1d_IkeResourceOps
     }
     
     // Rewards - pathfinder level
@@ -43,7 +50,33 @@ CONTRACT_TYPE
     
     // Target Body
     targetBody = Kerbin
-    
+
+    // Deliver the standardized ore container when contract is accepted
+    BEHAVIOUR
+    {
+        name = DeliverOreContainer
+        type = CopyCraftFile
+        url = ContractPacks/RedFrontier/CraftFiles/OreContainer_Standard.craft
+        craftType = SPH
+        onState = CONTRACT_ACCEPTED
+    }
+    roverWheelTR-2L
+    BEHAVIOUR
+    {
+        name = UnlockLandingStrut
+        type = ExperimentalPart
+        part = landingLeg1-2  // The part name for LT-2 Landing Strut
+        unlockCriteria = CONTRACT_ACCEPTANCE
+    }
+
+    BEHAVIOUR
+    {
+        name = UnlockroverWheelTR-2L
+        type = ExperimentalPart
+        part = roverWheel3
+        unlockCriteria = CONTRACT_ACCEPTANCE
+    }
+
     
 //==========================================================================================
 // Validation Parameters
