--- a/Contracts/RFP/RFP1_2b_SampleReturnPath.cfg
+++ b/Contracts/RFP/RFP1_2b_SampleReturnPath.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RFP1_2b_SampleReturnPath
     title = RFP1.2b: "Sample Return Pathfinder"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Sample Return Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Sample Return Operations Validation\n\nThe deep drilling technology validated in RFP1.2a will enable collection of subsurface samples from Duna, but returning these samples to orbit presents significant engineering challenges. Sample return from Duna's surface requires efficient ascent systems and precise orbital operations.\n\nBefore attempting sample return across interplanetary distances, we must validate our sample return technology using the Mun as a Duna analog. The Mun's similar gravity and airless environment will test our ascent systems without the complications of atmospheric flight.\n\nYour objective is to prove complete sample return operations from surface collection through orbital delivery. This includes landing sample collection systems, gathering materials using proven drilling technology, and successfully returning samples to an orbital facility through precision docking operations.
+    description = Mission Computer Terminal: WARNING Access to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Sample Return Systems Division\nTO: Technology Development Team\nSUBJECT: Sample Return Operations Validation\n\nThe deep drilling technology validated in RFP1.2a will enable collection of subsurface samples from Duna, but returning these samples to orbit presents significant engineering challenges. Sample return from Duna's surface requires efficient ascent systems and precise orbital operations.\n\nBefore attempting sample return across interplanetary distances, we must validate our sample return technology using the Mun as a Duna analog. The Mun's similar gravity and airless environment will test our ascent systems without the complications of atmospheric flight.\n\nYour objective is to prove complete sample return operations from surface collection through orbital delivery. This includes landing sample collection systems, gathering materials using proven drilling technology, and successfully returning samples to an orbital facility through precision docking operations.
     
     notes = Technology Validation Requirements:\n\nSample Return from Surface\nLand sample collection system on Mun and collect surface samples using proven drilling technology from RFP1.2a.\n\nSurface-to-Orbit Ascent\nDemonstrate efficient ascent vehicle design capable of returning samples to orbit with minimal fuel requirements.\n\nPrecision Orbital Docking\nProve precision orbital docking with samples, essential for delivery to the Duna orbital science station.\n\nSample Preservation\nValidate sample preservation and transfer systems to ensure scientific integrity during return operations.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Outstanding success! Sample return pathfinder has validated complete surface-to-orbit operations. Drilling technology integration, ascent systems, and precision docking all proven. Technology ready for Duna deployment. RFP1.2c is now available.
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements
