--- a/Contracts/RFP/RFP1_2c_AdvancedISRU.cfg
+++ b/Contracts/RFP/RFP1_2c_AdvancedISRU.cfg
@@ -3,7 +3,7 @@ CONTRACT_TYPE
     name = RFP1_2c_AdvancedISRU
     title = RFP1.2c: "Advanced ISRU Testing"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Advanced Resource Processing Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Enhanced Resource Processing Systems Validation\n\nThe expanded operations planned for RF1.2 will require enhanced resource processing capabilities beyond our current Ike facility. The drilling and sample return missions will significantly increase fuel demands, necessitating more sophisticated ISRU systems with higher throughput and multiple fuel types production.\n\nBefore deploying these enhanced systems to the Duna system, we must validate the technology by expanding our existing Minmus facility. This pathfinder will test advanced ore processing equipment, demonstrate multiple fuel types production, and validate automated resource management systems.\n\nYour objective is to enhance the existing Minmus ISRU facility with next-generation processing equipment, demonstrate increased production capacity, and prove automated resource management essential for supporting expanded Duna operations.
+    description = Mission Computer Terminal: WARNING Access to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Advanced Resource Processing Division\nTO: Technology Development Team\nSUBJECT: Enhanced Resource Processing Systems Validation\n\nThe expanded operations planned for RF1.2 will require enhanced resource processing capabilities beyond our current Ike facility. The drilling and sample return missions will significantly increase fuel demands, necessitating more sophisticated ISRU systems with higher throughput and multiple fuel types production.\n\nBefore deploying these enhanced systems to the Duna system, we must validate the technology by expanding our existing Minmus facility. This pathfinder will test advanced ore processing equipment, demonstrate multiple fuel types production, and validate automated resource management systems.\n\nYour objective is to enhance the existing Minmus ISRU facility with next-generation processing equipment, demonstrate increased production capacity, and prove automated resource management essential for supporting expanded Duna operations.
     
     notes = Technology Validation Requirements:\n\nAdvanced Ore Processing\nExpand existing Minmus facility with advanced ore processing equipment to increase throughput capacity.\n\nMultiple Fuel Types Production\nDemonstrate production of various propellant types to support diverse mission requirements.\n\nAutomated Resource Management\nTest automated resource management systems for optimal production scheduling and resource allocation.\n\nProduction Capacity Validation\nProve enhanced production capacity sufficient to support expanded Duna system operations.
     
@@ -12,7 +12,7 @@ CONTRACT_TYPE
     completedMessage = Exceptional results! Advanced ISRU testing has validated enhanced resource processing systems. Increased production capacity, multiple fuel types, and automated management all proven. Technology ready for Duna deployment. All RF1.2 pathfinder technologies now validated - deployment missions available!
     
     // Contract parameters
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     group = RedFrontier
     
     // Contract requirements
