--- a/RedFrontier.cfg
+++ b/RedFrontier.cfg
@@ -6,7 +6,7 @@ CONTRACT_GROUP
     minVersion = 1.30.0
     
     // Group details
-    agent = Lowne Aerospace
+    agent = Kerbal Initiatives Division
     maxSimultaneous = 5
 }
 
