--- a/Contracts/RF1_1b_DunaCommsNetwork.cfg
+++ b/Contracts/RF1_1b_DunaCommsNetwork.cfg
@@ -53,19 +53,69 @@ CONTRACT_TYPE
         dunaCommHub_communicationsRole = true
         persist = true
     }
+//========================================================================================== 
+//Orbital Definitions
+//========================================================================================== 
+    BEHAVIOUR
+    {
+        name = DunaOrbit
+        type = OrbitGenerator
+        FIXED_ORBIT
+        {
+            targetBody = Duna
+
+            ORBIT
+            {
+                SMA = 5154634
+			    ECC = 0.331
+			    INC = 0.06067561382005375
+			    LPE = 180.60863288083959
+			    LAN = 293.35633608213334
+			    MNA = 6.2771191435025537
+			    EPH = 3401084.3355471138
+			    REF = 6
+		    }  
+        }
+    }
+    BEHAVIOUR
+    {
+        name = DunaOrbit2
+        type = OrbitGenerator
+        FIXED_ORBIT
+        {
+            targetBody = Duna
+
+            ORBIT
+            {
+                SMA = 5154634
+			    ECC = 0.331
+			    INC = 0.06067561382005375
+			    LPE = 0.60863288083959
+			    LAN = 293.35633608213334
+			    MNA = 6.2771191435025537
+			    EPH = 3401084.3355471138
+			    REF = 6
+		    }  
+        }
+    }
     
 //==========================================================================================
 // Validation Parameters
 //==========================================================================================
-            
+    PARAMETER
+    {
+        name = DunaRelayValidationGroup
+        type = VesselParameterGroup
+        title = Develop Duna Communications Satellites
+        notes = Using the Vessel designed during pathfinder development, launch a constellation of 6 Relay satellites to Duna, Each Relay should be rated for at least 2.00Gm.
         PARAMETER
         {
-            name = HasHighGainAntenna
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 2
-            title = Each Satellite has 2 High-Gain Antenna Arrays
-	    hideChildren = true
+            name = HasRelayAntenna
+            type = HasAntenna
+            antennaType = RELAY
+            minAntennaPower = 2,100,000,000
+            title = Each Satellite has a High-Gain Relay Antenna
+	        //hideChildren = true
         }
         
         PARAMETER
@@ -75,72 +125,210 @@ CONTRACT_TYPE
             partModule = ModuleDeployableSolarPanel //tweak to accept RTG power
             minCount = 2
             title = Each Satellite has 2 Power Generation Systems
-	    hideChildren = true
+	        hideChildren = true
         }
     }
 //==========================================================================================
 // Objectives - Deploy validated communications technology
 //========================================================================================== 
-    
     PARAMETER
     {
-        name = CommHubGroup
-        type = VesselParameterGroup
-        title = Deploy Duna Communications Hub
-        
-        define = Duna Communications Hub
-        
+        name = Phase1
+        type = Sequence
+        title = Phase 1: 
+
         PARAMETER
         {
-            name = CommOrbit
+            name = ResonantInjectionOrbit
             type = Orbit
             targetBody = Duna
-            minAltitude = 300000
-            maxAltitude = 800000
+            title = Establish resonant orbit for first satellite triad deployment.
+            notes = Target Orbit: Apoapsis:6,500Km, Periapsis:3,270Km, INC:0, Arg Pe: 0
+            hideChildren = true
+
+            minArgumentOfPeriapsis = 357
+            maxArgumentOfPeriapsis = 3
+            minPeA = 3200000
+            maxPeA  = 3350000
+            minApA = 6450000
+            maxApA = 6550000
+            minEccentricity = 0.32
+            maxEccentricity = 0.34
+        }
+    
+        PARAMETER
+        {
+            name = ConstellationDeployment
+            type = Sequence
+            title = Deploy The First 3 Satellites Into The Constellation
+            notes = Deploy first triad of satellites from this orbit. Each satellite should be deployed at apoapsis during successive orbits to maintain proper spacing. 
+            completeInSequence = true
+    
+            PARAMETER
+            {
+                name = Satellite1
+                type = VesselParameterGroup
+                title = Deploy Satellite 1 - 15 Degrees Inclination - circularize at 6,500km
+                //notes = First satellite - deploy at apoapsis, circularize at 6,500km
+                hideChildren = true
+                define = Duna CommSat 1
+                completeInSequence = true
+        
+                PARAMETER
+                {
+                    name = ConstellationOrbit1
+                    type = Orbit
+                    targetBody = Duna
+                    minAltitude = 6450000
+                    maxAltitude = 6550000
+                    minInclination = 10
+                    maxInclination = 20
+                }
+            }
+
+            PARAMETER
+            {
+                name = Satellite2
+                type = VesselParameterGroup
+                title = Deploy Satellite 2 - 45Degrees Inclination - circularize at 6,500km
+                //notes = Second satellite - deploy at apoapsis, circularize at 6,500km
+                hideChildren = true
+                define = Duna CommSat 2
+                completeInSequence = true
+        
+                PARAMETER
+                {
+                    name = ConstellationOrbit2
+                    type = Orbit
+                    targetBody = Duna
+                    minAltitude = 6450000
+                    maxAltitude = 6550000
+                    minInclination = 40
+                    maxInclination = 50
+                }
+            }
+        
+            PARAMETER
+            {
+                name = Satellite3
+                type = VesselParameterGroup
+                title = Deploy Satellite 3 - 75 Degrees Inclination - circularize at 6,500km
+                //notes = Third satellite - deploy at apoapsis, circularize at 6,500km
+                hideChildren = true
+                define = Duna CommSat 3
+                completeInSequence = true
+        
+                PARAMETER
+                {
+                    name = ConstellationOrbit3
+                    type = Orbit
+                    targetBody = Duna
+                    minAltitude = 6450000
+                    maxAltitude = 6550000
+                    minInclination = 70
+                    maxInclination = 80
+                }
+            }
         }
     }
     
-//========================================================================================== 
-
     PARAMETER
     {
-        name = RelaySatellite1
-        type = VesselParameterGroup
-        title = Deploy Relay Satellite 1 (Polar Coverage)
-        
-        define = Duna Relay 1
-        
+        name = Phase2
+        type = Sequence
+        title = Phase 2: 
         PARAMETER
         {
-            name = PolarOrbit
+            name = ResonantInjectionOrbit2
             type = Orbit
             targetBody = Duna
-            minAltitude = 500000
-            maxAltitude = 1000000
-            minInclination = 80
-            maxInclination = 100
+            title = Establish resonant orbit with opposite argument of periapsis for second satellite triad. (Arg Pe 180 Degrees)
+            notes = Target Orbit: Apoapsis:6,500Km, Periapsis:3,270Km, INC:0, Arg Pe:180
+            hideChildren = true
+
+            minArgumentOfPeriapsis = 177
+            maxArgumentOfPeriapsis = 183
+            minPeA = 3200000
+            maxPeA  = 3350000
+            minApA = 6450000
+            maxApA = 6550000
+            minEccentricity = 0.32
+            maxEccentricity = 0.34
         }
-    }
-    
-//========================================================================================== 
 
-    PARAMETER
-    {
-        name = RelaySatellite2
-        type = VesselParameterGroup
-        title = Deploy Relay Satellite 2 (Equatorial Coverage)
-        
-        define = Duna Relay 2
-        
         PARAMETER
         {
-            name = EquatorialOrbit
-            type = Orbit
-            targetBody = Duna
-            minAltitude = 200000
-            maxAltitude = 400000
-            minInclination = 0
-            maxInclination = 15
+            name = ConstellationDeployment2
+            type = Sequence
+            title = Reposition carrier to opposite resonant orbit. 
+            notes = Deploy remaining satellites from this position at apoapsis on successive orbits to complete constellation coverage.
+            completeInSequence = true
+
+            PARAMETER
+            {
+                name = Satellite4
+                type = VesselParameterGroup
+                title = Deploy Satellite 4 - 15 Degrees Inclination - circularize at 6,500km
+                //notes = Forth satellite - deploy at apoapsis, circularize at 6,500km
+                hideChildren = true
+                define = Duna CommSat 4
+                completeInSequence = true
+        
+                PARAMETER
+                {
+                    name = ConstellationOrbit4
+                    type = Orbit
+                    targetBody = Duna
+                    minAltitude = 6450000
+                    maxAltitude = 6550000
+                    minInclination = 160
+                    maxInclination = 170
+                }
+            }
+
+            PARAMETER
+            {
+                name = Satellite5
+                type = VesselParameterGroup
+                title = Deploy Satellite 5 - 45 Degrees Inclination - circularize at 6,500km
+                //notes = Fifth satellite - deploy at apoapsis, circularize at 6,500km
+                hideChildren = true
+                define = Duna CommSat 5
+                completeInSequence = true
+        
+                PARAMETER
+                {
+                    name = ConstellationOrbit5
+                    type = Orbit
+                    targetBody = Duna
+                    minAltitude = 6450000
+                    maxAltitude = 6550000
+                    minInclination = 130
+                    maxInclination = 140
+                }
+            }
+        
+            PARAMETER
+            {
+                name = Satellite6
+                type = VesselParameterGroup
+                title = Deploy Satellite 6 - 75 Degrees Inclination - circularize at 6,500km
+                //notes = Sixth satellite - deploy at apoapsis, circularize at 6,500km
+                hideChildren = true
+                define = Duna CommSat 6
+                completeInSequence = true
+        
+                PARAMETER
+                {
+                    name = ConstellationOrbit6
+                    type = Orbit
+                    targetBody = Duna
+                    minAltitude = 6450000
+                    maxAltitude = 6550000
+                    minInclination = 100
+                    maxInclination = 110
+                }
+            }
         }
     }
 }
